--- a/css/style-adm.css
+++ b/css/style-adm.css
@@ -55,7 +55,7 @@ body {
 }
 .menu nav ul li.active { 
     background-color: #2b2a2a;
-    padding:14px;
+    padding: 8px 14px;
     
 }
 
@@ -101,6 +101,7 @@ body {
     overflow-x: hidden;
     transition: 0.3s;
     padding-top: 20px;
+    z-index: 2;
 }
 
 .menu nav ul {
@@ -109,7 +110,7 @@ body {
 }
 
 .menu nav ul li {
-    padding: 12px 14px;
+    padding: 10px 14px;
     margin:5px;
     border-radius:10px;
     transition: all .2s ease;
@@ -167,22 +168,51 @@ body {
 }
 
 .container-fluid .header-msg span{
-    background-color: red;
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
     color: var(--red-second);
     font-weight: 1000;
     
 }
-.boxes{
+.container-fluid .header-msg i{
+    display:none !important;
+    cursor:pointer;
     display:flex;
+    align-items: start;
+    font-size: 30px;
+    margin-bottom:7px;
+}
+.boxes {
+    
+    display: flex;
+    pointer-events: all;
+    visibility: visible;
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
     align-items: center;
     margin: 10px 0px 0px 31px !important;
-  
+    opacity: 1;
+    transition: opacity 0.2s ease; /* Só anima a opacidade */
 }
 
+.boxes.disabled {
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s ease; /* A opacidade será animada */
+}
+
+/* Após a animação de opacidade terminar, alterar a visibilidade */
+.boxes.hidden {
+    visibility: hidden;
+}
+
+
 .box{
+    cursor: pointer;
     border-radius:5px;
     border: 1px solid black;
     margin:20px;
@@ -222,3 +252,78 @@ body {
  
  }
 
+ .row-informations{
+    visibility: none;
+    pointer-events: none;
+    opacity: 0;
+    position: absolute;
+    top:80px;
+    padding:12px;
+    transition: opacity 0.2s ease; /* A opacidade será animada */
+    
+ }
+ .row-informations .titleVoltar{
+    font-size: 16px;
+    padding: 12px 20px 0px 0px;
+    width: 54px;
+    margin-bottom:20px;
+    font-weight: 600;
+    color:var(--red-first);
+    position: relative;
+   
+    cursor: pointer;
+}
+.row-informations.active{
+    pointer-events: all;
+    opacity: 1;
+    transition: opacity 0.2s ease; /* A opacidade será animada */
+}
+
+.row-informations .titleVoltar::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--red-first);
+    transition: width 0.3s ease;
+}
+
+.row-informations .titleVoltar:hover::after {
+    width: 100%; /* Faz a borda expandir para a direita */
+}
+.buttonDelete{
+    cursor: pointer;
+    font-weight: 600;
+    &:hover{
+        color:var(--red-first);
+    }
+}
+
+
+@media screen and (max-width: 540px) {
+   
+    .menu {
+        display:none;
+    }
+
+    .container-fluid .header-msg i{
+        display:flex !important;
+        cursor:pointer;
+        display:flex;
+        align-items: start;
+        font-size: 30px;
+        margin-bottom:7px;
+    }
+    .email{
+        display: none;
+    }
+
+    .table{
+        width: 84vw !important;
+    }
+
+    .boxes{
+        margin:10px !important;}
+}
