--- a/css/style-usuarios.css
+++ b/css/style-usuarios.css
@@ -1,36 +1,177 @@
-.container-tables{
+.container-tables {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top:20px;
+    margin-top: 20px;
     height: 100%;
-    
+
 
 }
 
-.btnCadastrar{
+.btnCadastrar {
     height: 300px;
 
 }
+
 .ri-menu-add-line {
-    font-size: 40px; 
+    font-size: 40px;
 }
-.ri-list-view{
-    font-size: 40px; 
+
+.ri-list-view {
+    font-size: 40px;
 
 }
 
-.box-name{
-    padding:0;
-    
-    margin-bottom:30px; 
-}
+.box-name {
+    padding: 0;
 
-.boxes{
-    pointer-events: all;
-    
+    margin-bottom: 30px;
 }
-.boxes.disabled{
+.row-boxes.disabled{
     pointer-events: none;
+}
+
+
+
+.titleVoltar {
+    pointer-events: none;
+
+}
+
+.titleVoltar.active {
+    pointer-events: all
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.form {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+}
+
+.box1-cadastro {
+    color:white;
+    display: flex;
+    align-items: center !important;
+    background-color: var(--red-first);
+    justify-content: center;
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 4px 8px 0px rgba(255, 0, 0, 0.75);
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    opacity: 0;
+    visibility: hidden;
+
+
+}
+
+
+
+/* Oculta com fade-out */
+
+
+/* Exibe com fade-in */
+.box1-cadastro.active {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
     
+}
+
+#button-yes,
+#button-no {
+    margin-top: 15px;
+    padding: 6px 15px 6px 15px;
+    border-radius: 5px;
+    background-color: var(--red-first);
+    color: white;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+
+    &:hover {
+        background-color: var(--red-second);
+    }
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.title h5 {
+    font-size: 18px;
+}
+
+.login {
+    width: 100%;
+    margin-top: 20px;
+    gap: 2px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.login label {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.login input,
+label,
+.button,
+.singIn,
+span {
+    margin: 0 auto;
+    padding: 2px;
+    width: 250px;
+    outline: none;
+}
+
+.login input {
+    border: 3px solid var(--white);
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px 0px rgba(255, 0, 0, 0.75);
+    padding: 2px 5px 2px 10px;
+
+}
+
+
+.login .button {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    color: #000;
+    font-weight: 500;
+    background-color: white;
+    transition: all .1s ease;
+
+    &:hover {
+        background-color: #ac3737;
+        color: white;
+    }
+}
+
+.login a {
+    cursor: pointer;
+    text-decoration: none;
+    color: inherit;
 }
